--- a/css/data.css
+++ b/css/data.css
@@ -6,7 +6,7 @@
     --font: "Wix Madefor Text", sans-serif;
 }
 *{
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     margin: 0;
     padding: 0;
 }
