--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@
 }
 /* section2 */
 .section2 .inner-warp .card-img{
-    max-height: 470px;
+    max-height: 400px;
     overflow: hidden;
 }
 .section2 .inner-warp img{
@@ -105,7 +105,7 @@
 }
 .section6 h1::after{
     content: "";
-    width: 650px;
+    width: 50%;
     height: 150px;
     background-color: white;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
@@ -143,5 +143,8 @@
     .main .inner-warp h1{
         text-align: center;
         font-size: 55px;
+    }
+    .section6 .img-fanpage{
+        width: 310px;
     }
 }
